# analysis

./: .gitignore  ANN.ipynb  README.md  kaggle.ipynb  kaggle1.ipynb  main-shift.py  main.py  nasa._gradientboost.ipynb  nasa.ipynb  nasa_randomforest.ipynb  pyproject.toml  rul_model_300.pth  shift-data.ipynb  uci.ipynb
best-model-shift/: mlp_shift_model.pth
best-model-yet/: txt.txt
